# nobody-sim

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
benchmarks/: bench_scaling.py  profile_bh.py
docs/: ARTICLE.md  linkedin_post.md
experiments/: exp_cluster.py  exp_energy_drift.py  fig_energy_drift.py
src/nbody/: __init__.py  barnes_hut.py  bodies.py  constants.py  diagnostics.py  forces.py  integrators.py  sim.py
tests/: conftest.py  test_barnes_hut.py  test_bodies_plummer.py  test_conservation.py  test_forces.py  test_history_json.py  test_integrators.py  test_placeholder.py
visualization/: index.html  player.html
visualization/data/: cluster_merger.json
